--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,11 @@
             <artifactId>javafx-graphics</artifactId>
             <version>24.0.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20210307</version>
+        </dependency>
         <!-- 测试依赖 -->
         <dependency>
             <groupId>junit</groupId>
